resources/tests/invalid_syntax/unary_plus.ct
//`Error: Unary '+' is not supported!
//1
fn hello()->void: +10;